Fix size overflowed in tooltip search

--- a/src/styles/offer.module.css
+++ b/src/styles/offer.module.css
@@ -532,6 +532,7 @@
   bottom: unset;
   top: 110%;
   display: none;
+  max-width: 100%;
 }
 
 .search:hover .compatibilityToolTip {
